# bg_generator_ai

./: .gitignore  main.py  mt_main.py  pyproject.toml  requirements.txt
modules/: config.py  methods.py  prompt.py  proxy.py  reqwests.py
